--- a/flexbox.css
+++ b/flexbox.css
@@ -54,3 +54,16 @@
     transform: scale(1);
   }
   
+.google-map{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+iframe{
+    width: 80%;
+    height: 500px;
+}
