--- a/tuscana.css
+++ b/tuscana.css
@@ -54,16 +54,17 @@
     transform: scale(1);
   }
   
-.google-map{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
 
-iframe{
-    width: 80%;
-    height: 500px;
+  .google-maps {
+    position: relative;
+    padding-bottom: 75%; 
+    height: 0;
+    overflow: hidden;
+}
+.google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
